[gd_scene load_steps=16 format=2]

[ext_resource path="res://Images/explosion3.png" type="Texture" id=1]
[ext_resource path="res://Images/explosion2.png" type="Texture" id=2]
[ext_resource path="res://Images/explosion1.png" type="Texture" id=3]
[ext_resource path="res://Images/explosion5.png" type="Texture" id=4]
[ext_resource path="res://Objects/Turret/Turret.gd" type="Script" id=5]
[ext_resource path="res://Images/tank_bigRed.png" type="Texture" id=6]
[ext_resource path="res://Images/explosion4.png" type="Texture" id=7]
[ext_resource path="res://Images/specialBarrel1_outline.png" type="Texture" id=8]
[ext_resource path="res://Bullet/shooot.tscn" type="PackedScene" id=9]

[sub_resource type="Shader" id=6]
code = " shader_type canvas_item;

uniform bool grayscale = false;
uniform bool coldscale = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	
	if (grayscale) { 
		COLOR.rbg = vec3(dot(COLOR.rgb, vec3(0.299, 0.587, 0.114)));
	}
	
	if (coldscale) { 
		COLOR.rbg = vec3(COLOR.r * 0.3, COLOR.b * 2.5 , COLOR.g * 1.5);
	}
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 6 )
shader_param/grayscale = false
shader_param/coldscale = false

[sub_resource type="Shader" id=7]
code = " shader_type canvas_item;

uniform bool grayscale = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	
	if (grayscale) { 
		COLOR.rbg = vec3(dot(COLOR.rgb, vec3(0.299, 0.587, 0.114)));
	}
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/grayscale = false

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.4497, 23.5244 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": false,
"name": "boom",
"speed": 12.0
} ]

[node name="Turrel" type="KinematicBody2D" groups=["enemy", "minimap_objects"]]
script = ExtResource( 5 )

[node name="tank_npc" type="Sprite" parent="."]
material = SubResource( 5 )
rotation = 3.14159
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="tank_npc3" type="Sprite" parent="."]
visible = false
material = SubResource( 8 )
position = Vector2( 1, -66 )
scale = Vector2( 0.590785, -0.607875 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.499992, 0.999999 )
rotation = 3.14159
scale = Vector2( 0.609045, -0.595127 )
shape = SubResource( 3 )

[node name="shooot2" parent="." instance=ExtResource( 9 )]
visible = true
position = Vector2( 6, -15 )
rotation = 2.47725e-06
scale = Vector2( 0.487236, -0.476102 )

[node name="shooot" parent="." instance=ExtResource( 9 )]
visible = true
position = Vector2( -6, -15 )
rotation = 2.47725e-06
scale = Vector2( 0.487236, -0.476102 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -5.09, -23 )
scale = Vector2( 0.609045, -0.595127 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 6, -23 )
scale = Vector2( 0.609045, -0.595127 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 0.6, 0.6 )

[node name="hpbar" type="ProgressBar" parent="Node2D"]
margin_left = -32.0
margin_top = -40.0
margin_right = 38.0
margin_bottom = -25.0

[node name="reloadprogress" type="ProgressBar" parent="Node2D"]
margin_left = -32.0
margin_top = -56.0
margin_right = 38.0
margin_bottom = -41.0
value = 50.0

[node name="Area2D" type="Area2D" parent="."]
rotation = -1.57079
scale = Vector2( 0.595127, -0.609045 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 25.2047, -1.64176, 536.022, -249.568, 536.018, 246.291 )

[node name="boom_player" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, 0 )
rotation = 3.14159
scale = Vector2( 0.609045, -0.595127 )
frames = SubResource( 4 )
animation = "boom"

[connection signal="animation_finished" from="shooot2" to="." method="_on_shooot2_animation_finished"]
[connection signal="animation_finished" from="shooot" to="." method="_on_shooot_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="boom_player" to="." method="_on_boom_player_animation_finished"]
